--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "git-branch": "^0.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2"
   }
 }
