--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "git-branch": "^0.3.0"
   },
   "devDependencies": {
-    "mocha": "^3.1.2"
+    "express": "^4.14.0",
+    "mocha": "^3.1.2",
+    "supertest": "^2.0.1"
   }
 }
