--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uphook",
-  "version": "1.0.2",
-  "description": "express middleware to automatically update and restart an application when the remote is updated and webhooked",
+  "version": "1.0.3",
+  "description": "express middleware to automatically update and restart an application based on github/gitlab webhook.",
   "main": "uphook.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
